@@ -1,6 +1,6 @@
 #!/bin/bash
 M2_REPO="${M2_REPO:-$HOME/.m2/repository}"
 
-CP="/home/afs/.m2/repo/org/apache/jena/jena-arq/2.9.3-SNAPSHOT/jena-arq-2.9.3-SNAPSHOT.jar:/home/afs/.m2/repo/commons-codec/commons-codec/1.5/commons-codec-1.5.jar:/home/afs/.m2/repo/org/apache/httpcomponents/httpcore/4.1.3/httpcore-4.1.3.jar:/home/afs/.m2/repo/org/apache/jena/jena-core/2.7.3-SNAPSHOT/jena-core-2.7.3-SNAPSHOT.jar:/home/afs/.m2/repo/org/apache/jena/jena-iri/0.9.3-SNAPSHOT/jena-iri-0.9.3-SNAPSHOT.jar:/home/afs/.m2/repo/xerces/xercesImpl/2.10.0/xercesImpl-2.10.0.jar:/home/afs/.m2/repo/xml-apis/xml-apis/1.4.01/xml-apis-1.4.01.jar:/home/afs/.m2/repo/org/apache/jena/jena-tdb/0.9.3-SNAPSHOT/jena-tdb-0.9.3-SNAPSHOT.jar:/home/afs/.m2/repo/junit/junit/4.9/junit-4.9.jar:/home/afs/.m2/repo/org/hamcrest/hamcrest-core/1.1/hamcrest-core-1.1.jar:/home/afs/.m2/repo/org/apache/httpcomponents/httpclient/4.1.2/httpclient-4.1.2.jar:/home/afs/.m2/repo/commons-fileupload/commons-fileupload/1.2.2/commons-fileupload-1.2.2.jar:/home/afs/.m2/repo/org/eclipse/jetty/jetty-server/7.5.4.v20111024/jetty-server-7.5.4.v20111024.jar:/home/afs/.m2/repo/javax/servlet/servlet-api/2.5/servlet-api-2.5.jar:/home/afs/.m2/repo/org/eclipse/jetty/jetty-continuation/7.5.4.v20111024/jetty-continuation-7.5.4.v20111024.jar:/home/afs/.m2/repo/org/eclipse/jetty/jetty-http/7.5.4.v20111024/jetty-http-7.5.4.v20111024.jar:/home/afs/.m2/repo/org/eclipse/jetty/jetty-io/7.5.4.v20111024/jetty-io-7.5.4.v20111024.jar:/home/afs/.m2/repo/org/eclipse/jetty/jetty-servlet/7.5.4.v20111024/jetty-servlet-7.5.4.v20111024.jar:/home/afs/.m2/repo/org/eclipse/jetty/jetty-security/7.5.4.v20111024/jetty-security-7.5.4.v20111024.jar:/home/afs/.m2/repo/org/eclipse/jetty/jetty-servlets/7.5.4.v20111024/jetty-servlets-7.5.4.v20111024.jar:/home/afs/.m2/repo/org/eclipse/jetty/jetty-client/7.5.4.v20111024/jetty-client-7.5.4.v20111024.jar:/home/afs/.m2/repo/org/eclipse/jetty/jetty-util/7.5.4.v20111024/jetty-util-7.5.4.v20111024.jar:/home/afs/.m2/repo/org/eclipse/jetty/jetty-xml/7.5.4.v20111024/jetty-xml-7.5.4.v20111024.jar:/home/afs/.m2/repo/org/apache/velocity/velocity/1.7/velocity-1.7.jar:/home/afs/.m2/repo/commons-collections/commons-collections/3.2.1/commons-collections-3.2.1.jar:/home/afs/.m2/repo/commons-lang/commons-lang/2.4/commons-lang-2.4.jar:/home/afs/.m2/repo/org/slf4j/slf4j-api/1.6.4/slf4j-api-1.6.4.jar:/home/afs/.m2/repo/org/slf4j/slf4j-log4j12/1.6.4/slf4j-log4j12-1.6.4.jar:/home/afs/.m2/repo/org/slf4j/jcl-over-slf4j/1.6.4/jcl-over-slf4j-1.6.4.jar:/home/afs/.m2/repo/log4j/log4j/1.2.16/log4j-1.2.16.jar"
+CP="/home/afs/.m2/repo/org/apache/jena/jena-arq/2.9.4-SNAPSHOT/jena-arq-2.9.4-SNAPSHOT.jar:/home/afs/.m2/repo/commons-codec/commons-codec/1.5/commons-codec-1.5.jar:/home/afs/.m2/repo/org/apache/httpcomponents/httpcore/4.1.3/httpcore-4.1.3.jar:/home/afs/.m2/repo/org/apache/jena/jena-core/2.7.4-SNAPSHOT/jena-core-2.7.4-SNAPSHOT.jar:/home/afs/.m2/repo/org/apache/jena/jena-iri/0.9.4-SNAPSHOT/jena-iri-0.9.4-SNAPSHOT.jar:/home/afs/.m2/repo/xerces/xercesImpl/2.10.0/xercesImpl-2.10.0.jar:/home/afs/.m2/repo/xml-apis/xml-apis/1.4.01/xml-apis-1.4.01.jar:/home/afs/.m2/repo/org/apache/jena/jena-tdb/0.9.4-SNAPSHOT/jena-tdb-0.9.4-SNAPSHOT.jar:/home/afs/.m2/repo/junit/junit/4.9/junit-4.9.jar:/home/afs/.m2/repo/org/hamcrest/hamcrest-core/1.1/hamcrest-core-1.1.jar:/home/afs/.m2/repo/org/apache/httpcomponents/httpclient/4.1.2/httpclient-4.1.2.jar:/home/afs/.m2/repo/commons-fileupload/commons-fileupload/1.2.2/commons-fileupload-1.2.2.jar:/home/afs/.m2/repo/org/eclipse/jetty/jetty-server/7.5.4.v20111024/jetty-server-7.5.4.v20111024.jar:/home/afs/.m2/repo/javax/servlet/servlet-api/2.5/servlet-api-2.5.jar:/home/afs/.m2/repo/org/eclipse/jetty/jetty-continuation/7.5.4.v20111024/jetty-continuation-7.5.4.v20111024.jar:/home/afs/.m2/repo/org/eclipse/jetty/jetty-http/7.5.4.v20111024/jetty-http-7.5.4.v20111024.jar:/home/afs/.m2/repo/org/eclipse/jetty/jetty-io/7.5.4.v20111024/jetty-io-7.5.4.v20111024.jar:/home/afs/.m2/repo/org/eclipse/jetty/jetty-servlet/7.5.4.v20111024/jetty-servlet-7.5.4.v20111024.jar:/home/afs/.m2/repo/org/eclipse/jetty/jetty-security/7.5.4.v20111024/jetty-security-7.5.4.v20111024.jar:/home/afs/.m2/repo/org/eclipse/jetty/jetty-servlets/7.5.4.v20111024/jetty-servlets-7.5.4.v20111024.jar:/home/afs/.m2/repo/org/eclipse/jetty/jetty-client/7.5.4.v20111024/jetty-client-7.5.4.v20111024.jar:/home/afs/.m2/repo/org/eclipse/jetty/jetty-util/7.5.4.v20111024/jetty-util-7.5.4.v20111024.jar:/home/afs/.m2/repo/org/eclipse/jetty/jetty-xml/7.5.4.v20111024/jetty-xml-7.5.4.v20111024.jar:/home/afs/.m2/repo/org/apache/velocity/velocity/1.7/velocity-1.7.jar:/home/afs/.m2/repo/commons-collections/commons-collections/3.2.1/commons-collections-3.2.1.jar:/home/afs/.m2/repo/commons-lang/commons-lang/2.4/commons-lang-2.4.jar:/home/afs/.m2/repo/org/slf4j/slf4j-api/1.6.4/slf4j-api-1.6.4.jar:/home/afs/.m2/repo/org/slf4j/slf4j-log4j12/1.6.4/slf4j-log4j12-1.6.4.jar:/home/afs/.m2/repo/org/slf4j/jcl-over-slf4j/1.6.4/jcl-over-slf4j-1.6.4.jar:/home/afs/.m2/repo/log4j/log4j/1.2.16/log4j-1.2.16.jar"
 
 echo "$CP"
